Update Video Demo

--- a/examples/finetune.ipynb
+++ b/examples/finetune.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "data_dir = '../data/all'\n",
     "\n",
-    "batch_size = 32\n",
+    "batch_size = 16\n",
     "epochs = 8\n",
     "workers = 0 if os.name == 'nt' else 8"
    ]
@@ -109,64 +109,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 2 of 38"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/nlpgpu5/anaconda3/envs/kwon/lib/python3.6/site-packages/facenet_pytorch/models/utils/detect_face.py:150: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
-      "  batch_boxes, batch_points = np.array(batch_boxes), np.array(batch_points)\n",
-      "/home/nlpgpu5/anaconda3/envs/kwon/lib/python3.6/site-packages/facenet_pytorch/models/mtcnn.py:372: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
-      "  boxes = np.array(boxes)\n",
-      "/home/nlpgpu5/anaconda3/envs/kwon/lib/python3.6/site-packages/facenet_pytorch/models/mtcnn.py:373: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
-      "  probs = np.array(probs)\n",
-      "/home/nlpgpu5/anaconda3/envs/kwon/lib/python3.6/site-packages/facenet_pytorch/models/mtcnn.py:374: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray\n",
-      "  points = np.array(points)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Batch 38 of 38"
-     ]
-    }
-   ],
-   "source": [
-    "dataset = datasets.ImageFolder(data_dir, transform=transforms.Resize((512, 512)))\n",
-    "dataset.samples = [\n",
-    "    (p, p.replace(data_dir, data_dir + '_cropped'))\n",
-    "        for p, _ in dataset.samples\n",
-    "]\n",
-    "        \n",
-    "loader = DataLoader(\n",
-    "    dataset,\n",
-    "    num_workers=workers,\n",
-    "    batch_size=batch_size,\n",
-    "    collate_fn=training.collate_pil\n",
-    ")\n",
-    "\n",
-    "for i, (x, y) in enumerate(loader):\n",
-    "    mtcnn(x, save_path=y)\n",
-    "    print('\\rBatch {} of {}'.format(i + 1, len(loader)), end='')\n",
-    "    \n",
-    "# Remove mtcnn to reduce GPU memory usage\n",
-    "del mtcnn"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -175,14 +117,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "resnet = InceptionResnetV1(\n",
     "    classify=True,\n",
     "    pretrained='vggface2',\n",
-    "    num_classes=len(dataset.class_to_idx)\n",
+    "    num_classes=23\n",
     ").to(device)"
    ]
   },
@@ -195,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +149,8 @@
     "    transforms.ToTensor(),\n",
     "    fixed_image_standardization\n",
     "])\n",
-    "dataset = datasets.ImageFolder(data_dir + '_cropped', transform=trans)\n",
+    "# dataset = datasets.ImageFolder(data_dir + '_cropped', transform=trans)\n",
+    "dataset = datasets.ImageFolder(data_dir, transform=trans)\n",
     "img_inds = np.arange(len(dataset))\n",
     "np.random.shuffle(img_inds)\n",
     "train_inds = img_inds[:int(0.8 * len(img_inds))]\n",
@@ -236,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "scrolled": false
    },
@@ -269,47 +212,47 @@
       "\n",
       "Initial\n",
       "----------\n",
-      "Valid |     8/8    | loss:    3.0535 | fps:  802.2953 | acc:    0.0859   \n",
+      "Valid |    16/16   | loss:    3.1122 | fps:  666.5499 | acc:    0.0781   \n",
       "\n",
       "Epoch 1/8\n",
       "----------\n",
-      "Train |    31/31   | loss:    1.9669 | fps:  234.5460 | acc:    0.4335   \n",
-      "Valid |     8/8    | loss:    3.7740 | fps: 1044.8265 | acc:    0.3563   \n",
+      "Train |    62/62   | loss:    2.4250 | fps:  168.7473 | acc:    0.3236   \n",
+      "Valid |    16/16   | loss:    2.4920 | fps:  646.9950 | acc:    0.3875   \n",
       "\n",
       "Epoch 2/8\n",
       "----------\n",
-      "Train |    31/31   | loss:    1.1029 | fps:  229.9842 | acc:    0.6613   \n",
-      "Valid |     8/8    | loss:    1.3296 | fps:  711.1356 | acc:    0.5998   \n",
+      "Train |    62/62   | loss:    1.6879 | fps:  162.5123 | acc:    0.4829   \n",
+      "Valid |    16/16   | loss:    2.1188 | fps:  752.8311 | acc:    0.4078   \n",
       "\n",
       "Epoch 3/8\n",
       "----------\n",
-      "Train |    31/31   | loss:    0.7054 | fps:  233.4469 | acc:    0.7984   \n",
-      "Valid |     8/8    | loss:    0.8847 | fps:  815.2330 | acc:    0.7348   \n",
+      "Train |    62/62   | loss:    1.0907 | fps:  162.1543 | acc:    0.6663   \n",
+      "Valid |    16/16   | loss:    1.6492 | fps:  605.8689 | acc:    0.5305   \n",
       "\n",
       "Epoch 4/8\n",
       "----------\n",
-      "Train |    31/31   | loss:    0.6002 | fps:  231.1733 | acc:    0.8075   \n",
-      "Valid |     8/8    | loss:    1.0622 | fps: 1042.7659 | acc:    0.7044   \n",
+      "Train |    62/62   | loss:    0.8362 | fps:  162.7656 | acc:    0.7208   \n",
+      "Valid |    16/16   | loss:    1.3361 | fps:  514.8594 | acc:    0.5883   \n",
       "\n",
       "Epoch 5/8\n",
       "----------\n",
-      "Train |    31/31   | loss:    0.3965 | fps:  225.6192 | acc:    0.8700   \n",
-      "Valid |     8/8    | loss:    0.8874 | fps:  810.2592 | acc:    0.7066   \n",
+      "Train |    62/62   | loss:    0.6795 | fps:  163.6182 | acc:    0.7823   \n",
+      "Valid |    16/16   | loss:    1.1315 | fps:  539.8393 | acc:    0.6516   \n",
       "\n",
       "Epoch 6/8\n",
       "----------\n",
-      "Train |    31/31   | loss:    0.1672 | fps:  226.4910 | acc:    0.9667   \n",
-      "Valid |     8/8    | loss:    0.5426 | fps:  742.4816 | acc:    0.8720   \n",
+      "Train |    62/62   | loss:    0.3349 | fps:  162.5788 | acc:    0.9012   \n",
+      "Valid |    16/16   | loss:    0.5986 | fps:  560.9724 | acc:    0.8273   \n",
       "\n",
       "Epoch 7/8\n",
       "----------\n",
-      "Train |    31/31   | loss:    0.0739 | fps:  228.5638 | acc:    0.9889   \n",
-      "Valid |     8/8    | loss:    0.5201 | fps: 1048.3652 | acc:    0.8689   \n",
+      "Train |    62/62   | loss:    0.2116 | fps:  165.7846 | acc:    0.9395   \n",
+      "Valid |    16/16   | loss:    0.6027 | fps:  471.7074 | acc:    0.8000   \n",
       "\n",
       "Epoch 8/8\n",
       "----------\n",
-      "Train |    31/31   | loss:    0.0566 | fps:  223.2786 | acc:    0.9980   \n",
-      "Valid |     8/8    | loss:    0.5039 | fps:  884.0913 | acc:    0.8641   \n"
+      "Train |    62/62   | loss:    0.1665 | fps:  160.3688 | acc:    0.9587   \n",
+      "Valid |    16/16   | loss:    0.5392 | fps:  542.7217 | acc:    0.8242   \n"
      ]
     }
    ],
@@ -356,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
